# boringcaml

./: Makefile  README.md  boringcaml.opam
.github/workflows/: test.yaml
lib/: boringcaml.ml  boringcaml.mli  dune  evaluator.ml  evaluator.mli  expr.ml  expr.mli  l.mll  loc.ml  p.mly  parser.ml  parser.mli  pat.ml  value.ml  value.mli
test/: dune  test_boringcaml.ml
