opam-version: "2.0"
synopsis: "BoringCaml"
description: "BoringCaml"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "LICENSE"
tags: ["caml"]
homepage: "https://github.com/ushitora-anqou/boringcaml"
doc: "https://github.com/ushitora-anqou/boringcaml"
bug-reports: "https://github.com/ushitora-anqou/boringcaml/issues"
depends: [
  "ocaml"
  "dune" {>= "3.16"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/boringcaml.git"
